fixed social bar horizontal align

--- a/source/assets/stylesheets/pages/_home.sass
+++ b/source/assets/stylesheets/pages/_home.sass
@@ -125,6 +125,8 @@
     background-color: $brand-success
 
 @media (min-width: $screen-lg-min)
+  .social-title
+    margin-top: 25px
   .social-icons
     float: right
   .brand-title
